force-app/main/default/objects/Position__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>IF ( ISPICKVAL( Status__c ,&quot;Open&quot;) , TODAY()- Date_Opened__c ,  Date_Closed__c - Date_Opened__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>