force-app/main/default/objects/Position__c/fields/Global__c.field-meta.xml
<CustomField>
    <fullName>Global__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Position Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>