force-app/main/default/objects/Position__c/validationRules/Every_Position_Must_Have_Hiring_Mgr.validationRule-meta.xml
<ValidationRule>
    <fullName>Every_Position_Must_Have_Hiring_Mgr</fullName>
    <active>true</active>
    <description>Every_Position_Must_Have_a Hiring_Manager.</description>
    <errorConditionFormula>ISBlank( Hiring_Manager__c )</errorConditionFormula>
    <errorDisplayField>Hiring_Manager__c</errorDisplayField>
    <errorMessage>Every Position must have a Hiring Manager.</errorMessage>
</ValidationRule>