force-app/main/default/objects/Position__c/validationRules/Temp_Position_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Temp_Position_Validation</fullName>
    <active>true</active>
    <description>Temporary position require a value for duration between 1 and 365 days.</description>
    <errorConditionFormula>(ISPICKVAL( Type__c , &quot;Temp&quot;) &amp;&amp;  (BLANKVALUE( Duration__c, 0) &lt; 1 || Duration__c &gt; 365))</errorConditionFormula>
    <errorMessage>Temporary positions require a value for the duration between 1 and 365 days.</errorMessage>
</ValidationRule>